--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 $text-color: #B3B3B3;
 $background-color: #191414;
+$alt-background-color: #181818;
 $light-green: #1ed760;
 $green: #1db954;
-$break-large: 1200px;
+$break-large: 992px;
 $font: 'Varela Round', sans-serif;
