--- a/src/components/Display/SongDisplay.scss
+++ b/src/components/Display/SongDisplay.scss
@@ -5,10 +5,34 @@
     background-color: $background-color;
     color: $text-color;
     font-family: $font;
+    display: flex;
+    flex-direction: column;
     img{
         box-shadow: 0 0 100px #fff;
         margin-top: 2em;
         margin-bottom: .5em;
+        margin-left: 2em;
 
+    }
+}
+
+.display-top{
+    display: flex;
+    flex-direction: row;
+}
+
+.song-details{
+    margin-top: 2em;
+    margin-left: 1em;
+    text-align: left;
+    //line-height: .25em;
+
+    h1{
+        text-decoration: underline;
+        margin-bottom: .5em;
+    }
+
+    h2{
+        margin-bottom: .5em;
     }
 }
