--- a/src/components/SongItem/SongItem.scss
+++ b/src/components/SongItem/SongItem.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     padding: .5em;
-    width: 60%;
+    width: 45%;
 
     div{
         padding-top: .5em;
@@ -26,13 +26,56 @@
         span{
             margin-right: .25em;
             text-align: left;
+            
         }
+
+        
     }
+}
+
+.artist-names{
+    //max-width: 18em;
+    //height: 1em;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+
+    //display: none;
 }
 
 .play-info{
     display: flex;
     justify-content: flex-end;
     padding: .5em;
-    width: 40%;
+    width: 35%;
+    //margin: .5em 1.5em;
+}
+
+.controls{
+
+    width: 12%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: relative;
+    padding-right: 1em;
+    //height: 100%;
+
+    div{
+        font-size: 2em;
+        background-color: $green;
+        width: 1.5em;
+        height: 1.5em;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    i {
+        
+        color: #fff;
+        text-align: center;
+        //padding-bottom: -5px;
+        
+    }
 }
