--- a/src/components/SongItem/SongItem.scss
+++ b/src/components/SongItem/SongItem.scss
@@ -59,7 +59,7 @@
     align-items: center;
     position: relative;
     padding-right: 1em;
-    //height: 100%;
+    //height: 4rem;
 
     div{
         font-size: 2em;
@@ -75,7 +75,6 @@
         
         color: #fff;
         text-align: center;
-        //padding-bottom: -5px;
         
     }
 }
