added loading screen

--- a/src/components/Display/SongDisplay.scss
+++ b/src/components/Display/SongDisplay.scss
@@ -12,7 +12,8 @@
         margin-top: 2em;
         margin-bottom: .5em;
         margin-left: 2em;
-
+        max-height: 60px;
+        max-width: 60px;
     }
 }
 
