--- a/src/components/Display/PlaylistEditDisplay.scss
+++ b/src/components/Display/PlaylistEditDisplay.scss
@@ -12,7 +12,7 @@
         margin: 0 2em;
 
         div{
-            margin: .5em 0;
+            margin: .25em 0;
 
             label{
                 margin: 0 .5em;
@@ -26,19 +26,28 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 15vh;
-
+    height: 20vh;
+    flex-direction: row;
+    padding: .5em;
 
     img{
-        height: 60px;
-        width: 60px;
+        height: 80px;
+        width: 80px;
         box-shadow: 0 0 100px $text-color; 
+        margin: .5em;
     }
 
     div{
         display: flex;
         flex-direction: column;
         margin: 0 1em;
+
+        button{
+            padding: .5em 1em;
+            border-radius: 20px;
+            background-color: $green;
+            color: #fff;
+        }
     }
 }
 
