--- a/src/components/tools/SyncPlaylist.scss
+++ b/src/components/tools/SyncPlaylist.scss
@@ -1,30 +1,5 @@
 @import '../../styles/variables.scss';
 
-.playlist-item{
-    display: flex;
-    justify-content: space-between;
-}
-
-.playlist-info-side{
-    color: $text-color;
-    height: 60px;
-    display: flex;
-    align-items: center;
-
-    img{
-        height: 60px;
-        width: 60px;
-    }
-
-    .playlist-info{
-        padding-left: .5em;
-        text-align: left;
-        p{
-            padding-bottom: .2em;
-        }
-    }
-}
-
 .fetch-control{
     border: 2px solid $text-color;
     border-radius: 50%;
@@ -39,7 +14,10 @@
         background-color: transparent;
         color: #fff;
         font-size: 1.25em;
-       
+        
+    }
+    button:hover{
+        background-color: transparent;
     }
 }
 
