--- a/src/components/Display/SongDisplay.scss
+++ b/src/components/Display/SongDisplay.scss
@@ -7,26 +7,21 @@
     font-family: $font;
     display: flex;
     flex-direction: column;
-    img{
-        box-shadow: 0 0 100px #fff;
-        margin-top: 2em;
-        margin-bottom: .5em;
-        margin-left: 2em;
-        max-height: 60px;
-        max-width: 60px;
-    }
+    width:100%;
+    
 }
 
 .display-top{
     display: flex;
     flex-direction: row;
+    width: 100%;
+    height: 70%;
 }
 
 .song-details{
     margin-top: 2em;
     margin-left: 1em;
     text-align: left;
-    //line-height: .25em;
 
     h1{
         text-decoration: underline;
@@ -36,4 +31,31 @@
     h2{
         margin-bottom: .5em;
     }
+}
+
+.information-display{
+    display: flex;
+    flex-direction: row;
+    width: 70%;
+    height: 100%;
+    overflow: hidden;
+
+    .album-art{
+        box-shadow: 0 0 100px #fff;
+        margin-top: 2em;
+        margin-bottom: .5em;
+        margin-left: 2em;
+        max-height: 60px;
+        max-width: 60px;
+    }
+}
+
+.conditional-controls{
+    width:30%;
+    padding: 1em;
+}
+
+.controls-bottom{
+    margin: 0 1em;
+    height: 30%;
 }
