--- a/src/components/Controls/GeneratePlaylistByTags.scss
+++ b/src/components/Controls/GeneratePlaylistByTags.scss
@@ -5,20 +5,72 @@
     display: flex;
     flex-direction: column;
     height: 58vh;
-    
+    align-items: center;
 }
 
 .tag-selector{
     display: flex;
     flex-direction: column;
     // justify-content: space-between;
-    overflow: scroll;
-    height: 35%;
-    width: 80%;
+    overflow: auto;
+    height: 6em;
+    width: 100%;
+    border: 2px solid $text-color;
+    border-top: none;
+    background-color: #282828;
+
 }
 
 .tag-selector-item{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
+    padding: .5em;
+    div{
+
+        display: flex;
+        justify-content: space-between;
+        width: 80%;
+    }
+}
+
+.generate-playlist-panal{
+    margin: .25em 0;
+    
+    width: 80%;
+    h3{
+        background-color: $alt-background-color;
+        color: $text-color;
+        height: 2em;
+        border: 2px solid $text-color;
+        padding: 5px;
+        border-radius: 10px 10px 0 0;
+        font-family: $font;
+    }
+
+   
+}
+
+.open{
+    //animation: $open-top-left;
+    //height: 6em;
+}
+
+.close{
+    //animation: $close-top-left;
+    //height: 4em;
+}
+
+.filter-input{
+    border: 1px solid $text-color;
+    border-radius: 10px;
+    background-color: $transparent-background-color;
+    padding: .25em;
+    padding-left: 1em;
+    margin: 0 .5em;
+    color: #fff;
+}
+
+.filter-input::placeholder{
+    text-align: center;
 }
