--- a/src/components/tools/SyncPlaylist.scss
+++ b/src/components/tools/SyncPlaylist.scss
@@ -48,3 +48,25 @@
         animation: $spin;
     }
 }
+
+.sync-modal{
+    position: fixed;
+    top: 10vh;
+    left: 10vw;
+    height: 80vh;
+    width: 80vw;
+    background-color: $background-color;
+    color: $text-color;
+    z-index: 200;
+
+    h1{
+        border-bottom: 1px solid $text-color;
+        font-size: 2rem;
+        padding: .5em;
+    }
+
+    h3{
+        font-size: 1.5rem;
+        padding: .25em;
+    }
+}
