--- a/src/components/tools/SyncPlaylist.scss
+++ b/src/components/tools/SyncPlaylist.scss
@@ -58,15 +58,28 @@
     background-color: $background-color;
     color: $text-color;
     z-index: 200;
+    animation: $fade-in;
+    font-family: $font;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 
     h1{
         border-bottom: 1px solid $text-color;
         font-size: 2rem;
         padding: .5em;
+        width: 100%;
+        text-align: center;
     }
 
     h3{
         font-size: 1.5rem;
         padding: .25em;
+        width: 100%;
+        text-align: center;
+    }
+
+    p{
+        padding-left: 1.5em;
     }
 }
