--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -20,6 +20,8 @@ $open-right: openRight .25s normal forwards ease-in-out;
 $close-right: closeRight .25s normal forwards ease-in-out;
 $open-left: openLeft .35s normal forwards ease-in-out;
 $close-left: closeLeft .35s normal forwards ease-in-out;
+$fade-in: fadeIn .5s normal forwards ease-in-out;
+$fade-out: fadeOut .5s normal forwards ease-in-out;
 
 @keyframes spin{
     100% {transform: rotate(360deg)}
@@ -90,5 +92,23 @@ $close-left: closeLeft .35s normal forwards ease-in-out;
     to { 
         transform-origin: left top;
         transform: scaleX(0) 
+    }
+}
+
+@keyframes fadeIn {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
     }
 }
