--- a/src/components/tools/SyncPlaylist.scss
+++ b/src/components/tools/SyncPlaylist.scss
@@ -10,13 +10,13 @@
     align-items: center;
     justify-content: center;
 
-    button{
+    .fetch-button{
         background-color: transparent;
         color: #fff;
         font-size: 1.25em;
         
     }
-    button:hover{
+    .fetch-button:hover{
         background-color: transparent;
     }
 }
@@ -25,7 +25,7 @@
     border: 2px solid $green;
     box-shadow: 0 0 10px $green;
 
-    button{
+    .fetch-button{
         color: $light-green;
     }
 }
@@ -34,7 +34,7 @@
     border: 2px solid $red;
     box-shadow: 0 0 10px $red;
 
-    button{
+    .fetch-button{
         color: $light-red;
     }
 }
@@ -43,7 +43,7 @@
     border: 2px solid $yellow;
     box-shadow: 0 0 10px $yellow;
 
-    button{
+    .fetch-button{
         color: $light-yellow;
         animation: $spin;
     }
@@ -63,6 +63,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    overflow: auto;
 
     h1{
         border-bottom: 1px solid $text-color;
@@ -81,5 +82,20 @@
 
     p{
         padding-left: 1.5em;
+    }
+}
+
+.green-button{
+    
+    color: #fff;
+    background-color: $green;
+    padding: .5em;
+    font-size: 1em;
+    border-radius: 20px;
+    
+    
+    :hover{
+        background-color: $light-green;
+        transform: scale(1.05);
     }
 }
