--- a/src/components/Player/PlayerFooter.scss
+++ b/src/components/Player/PlayerFooter.scss
@@ -6,5 +6,24 @@
     left: 0;
     height: 10vh;
     width: 100%;
-    background-color: $text-color;
+    background-color: $background-color;
+    animation: $fade-in;
+    display: flex;
+
+}
+
+.currently-playing-info{
+    color: $text-color;
+    padding:.5em;
+    display: flex;
+    flex-direction: column;
+    font-size: .75rem;
+    text-align: left;
+    font-family: $font;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
+    p{
+        margin: .2em 0;
+    }
 }
