--- a/src/components/Display/PlaylistEditDisplay.scss
+++ b/src/components/Display/PlaylistEditDisplay.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .playlist-edit-display{
-    height: 38vh;
+    height: 24vh;
     width: 100%;
     color: $text-color;
 
@@ -10,6 +10,7 @@
         flex-direction: column;
         align-items: flex-start;
         margin: 0 2em;
+        padding-top: 2em;
 
         div{
             margin: .25em 0;
