--- a/src/components/tools/AddTagButton.scss
+++ b/src/components/tools/AddTagButton.scss
@@ -12,7 +12,8 @@
     h4{
         position: absolute;
         left: calc(50% - 2em);
-        z-index: 105;
+        bottom: 18px;
+        // z-index: 105;
     }
 }
 
@@ -81,27 +82,3 @@
     width: 100%;
 }
 
-.previous-tag-list{
-    margin-top: .5em;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    overflow: hidden;
-    height: 45%;
-    h2{
-        
-       width: 80%;
-       border-bottom: 2px solid $text-color; 
-       text-align: left;
-       margin-bottom: .5em;
-       height: 15%;
-    }
-
-    .tag-list{
-        width: 80%;
-        height: 85%;
-        overflow: auto;
-    }
-}
