--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,10 @@
 @import './reset.scss';
 
+*{
+    // -webkit-font-smoothing: antialiased;
+    // animation: translate3d( 0, 0, 0);
+}
+
 $text-color: #B3B3B3;
 $background-color: #191414;
 $alt-background-color: #181818;
