--- a/src/components/Player/PlayerFooter.scss
+++ b/src/components/Player/PlayerFooter.scss
@@ -2,7 +2,7 @@
 
 
 .player-footer{
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     height: 10vh;
@@ -37,7 +37,7 @@
     color: $text-color;
     background-color: $background-color;
     border-radius: 10px 10px 0 0;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: calc(50% - 2rem);
     border: 1px solid $text-color;
