working on fixing bugs related to generating playlist based on tags

--- a/src/components/SongSearch/SongSearch.scss
+++ b/src/components/SongSearch/SongSearch.scss
@@ -50,6 +50,6 @@
     }
 }
 
-* > button:hover {
-    background-color: $light-green;
-}
+// * > button:hover {
+//     background-color: $light-green;
+// }
