--- a/src/components/Controls/GeneratePlaylistByTags.scss
+++ b/src/components/Controls/GeneratePlaylistByTags.scss
@@ -75,3 +75,12 @@
 .filter-input::placeholder{
     text-align: center;
 }
+
+.disabled-button{
+    background-color: $text-color;
+    color: #fff;
+    padding: .5em;
+    font-size: 1em;
+    border-radius: 20px;
+
+}
